--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+  "dev": "vite --port 5177 --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "walletwatcher": "file:.."
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.2",
