--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node src/check-balances.mjs",
     "check": "node src/check-balances.mjs",
-    "watch": "node src/watch.mjs"
+  "watch": "node src/watch.mjs",
+  "server": "npm run --prefix server dev",
+  "react": "npm run --prefix web dev",
+  "web": "npm run --prefix web dev"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
