--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "ethers": "^6.10.0",
-    "nodemailer": "^6.10.1"
+  "nodemailer": "^6.10.1",
+  "@solana/web3.js": "^1.95.3",
+  "tronweb": "^6.0.1"
   }
 }
